# ust

./: .env  .gitignore  .spotify_token_cache.json  Cargo.toml
src/: auth.rs  main.rs  redirect_uri.rs  tui.rs
src/auth/: client.rs  redirect_uri.html  redirect_uri.rs  token.rs
