[package]
name = "ust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rspotify = { git = "https://github.com/ramsayleung/rspotify", branch = "master", features = ["cli", "env-file", "client-reqwest"] }
tui = "0.19.0"
crossterm = "0.25.0"
tokio = { version = "1.29.1", features = ["full"] }
env_logger = "0.10.0"
